--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.11.0",
     "@clerk/themes": "^2.1.35",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -24,9 +26,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.59.8",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react-slick": "^0.23.13",
     "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
@@ -43,11 +47,13 @@
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.417.0",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lottie-player": "^2.1.0",
+    "react-pdf": "^9.1.1",
     "react-phone-number-input": "^3.4.6",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
