--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
+    "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
     "jquery": "^3.7.1",
     "lottie-web": "^5.12.2",
