--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "react-lottie-player": "^2.1.0",
     "react-phone-number-input": "^3.4.6",
