--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
+    "react-scan": "^0.2.7",
     "react-slick": "^0.30.2",
     "react-to-print": "^3.0.2",
     "slick-carousel": "^1.8.1",
