--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.11.0",
+    "@clerk/clerk-react": "^5.24.2",
     "@clerk/themes": "^2.1.35",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -61,6 +61,7 @@
     "react-router-dom": "^6.26.2",
     "react-scan": "^0.2.7",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.15.0",
     "react-to-print": "^3.0.2",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
