--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-icons": "^5.2.1",
     "react-lottie-player": "^2.1.0",
     "react-phone-number-input": "^3.4.6",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
