--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
