--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "react-lottie-player": "^2.1.0",
+    "react-pdf": "^9.2.1",
     "react-phone-number-input": "^3.4.6",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
