--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.1",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.417.0",
     "next-themes": "^0.3.0",
