--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.24.2",
     "@clerk/themes": "^2.1.35",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
@@ -40,6 +42,8 @@
     "emailjs-com": "^3.2.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
