--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-spinners": "^0.15.0",
     "react-to-print": "^3.0.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.8",
