--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.24.2",
+    "@clerk/clerk-js": "^5.65.0",
+    "@clerk/clerk-react": "^5.31.2",
     "@clerk/themes": "^2.1.35",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
