--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
-    "@reduxjs/toolkit": "^2.2.7",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.59.8",
     "@types/pdfjs-dist": "^2.10.377",
@@ -62,7 +61,8 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-lottie-player": "^2.1.0",
     "react-pdf": "^9.2.1",
     "react-phone-number-input": "^3.4.6",
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
