--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cobe": "^0.6.3",
     "date-fns": "^4.1.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
@@ -54,6 +55,7 @@
     "jspdf": "^3.0.1",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.417.0",
+    "motion": "^12.12.1",
     "next-themes": "^0.3.0",
     "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
