--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "input-otp": "^1.2.4",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.1",
+    "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.417.0",
     "motion": "^12.12.1",
@@ -86,6 +87,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
