--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-loader-spinner": "^6.1.6",
     "react-lottie-player": "^2.1.0",
     "react-pdf": "^9.2.1",
