--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "input-otp": "^1.2.4",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.1",
