--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
     "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.59.8",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react-slick": "^0.23.13",
@@ -105,7 +106,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.9.0",
     "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.3.4"
