--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "input-otp": "^1.2.4",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.417.0",
@@ -90,6 +91,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
