--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cobe": "^0.6.3",
+    "croppr": "^2.3.1",
     "date-fns": "^4.1.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
