--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-awesome-reveal": "^4.2.14",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
