--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-slick": "^0.23.13",
     "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
