--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-js": "^5.67.2",
     "@clerk/clerk-react": "^5.31.2",
     "@clerk/themes": "^2.1.35",
+    "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.2.0",
