--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.9.0",
     "postcss": "^8.4.40",
+    "prettier": "^3.8.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
