--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -49,7 +50,7 @@
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
-    "gsap": "^3.12.5",
+    "gsap": "^3.14.2",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "input-otp": "^1.2.4",
@@ -90,6 +91,7 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
+    "split-type": "^0.3.4",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.8",
     "tailwind-merge": "^2.4.0",
