--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cobe": "^0.6.3",
+    "country-state-city": "^3.2.1",
     "croppr": "^2.3.1",
     "date-fns": "^4.1.0",
     "emailjs": "^4.0.3",
